k8s/svc-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: "svc-prometheus"
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - name: webadmin
    protocol: TCP
    port: 9090
    targetPort: 9090
